--- a/css/unique-components.css
+++ b/css/unique-components.css
@@ -5,6 +5,7 @@
 
 .container {
   margin: 0 auto;
+  padding: 0;
 }
 @media screen and (min-width: 375px) {
   .container {
@@ -24,11 +25,32 @@
 
 .unique-components {
   padding-top: 72px;
+  padding-bottom: 72px;
+}
+@media screen and (min-width: 768px) {
+  .unique-components {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .unique-components {
+    padding-top: 128px;
+    padding-bottom: 128px;
+  }
+}
+
+.flex-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 335px;
 }
 
 .secondary-title {
   color: #111;
-  font-family: Montserrat;
+  /* font-family: Montserrat; */
   font-size: 20px;
   font-weight: 600;
   line-height: 24px; /* 120% */
@@ -36,8 +58,17 @@
   text-transform: uppercase;
   font-style: normal;
   text-align: center;
-  justify-content: center;
   margin-bottom: 24px;
+  max-width: 283px;
+}
+@media screen and (min-width: 768px) {
+  .secondary-title {
+    font-size: 24px;
+    line-height: 28px; /* 116.667% */
+    letter-spacing: -0.72px;
+    margin-bottom: 28px;
+    max-width: 400px;
+  }
 }
 
 .highlight {
@@ -46,7 +77,7 @@
 
 .paragraph {
   color: #111;
-  font-family: Montserrat;
+  /* font-family: Montserrat; */
   font-size: 14px;
   font-weight: 400;
   line-height: 18px; /* 128.571% */
@@ -55,4 +86,184 @@
   text-align: center;
   justify-content: center;
   margin-bottom: 32px;
+  width: 300px;
+}
+@media screen and (min-width: 768px) {
+  .paragraph {
+    margin-bottom: 50px;
+    width: 450px;
+  }
+}
+
+.unique-components-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0;
+  padding-left: 0;
+  gap: 20px;
+}
+
+.unique-components-item {
+}
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 335px;
+  height: 270px;
+  border-radius: 15px;
+  border: 1px solid transparent;
+  align-items: center;
+  overflow: visible;
+  perspective: 2000px; /* Remove this if you don't want the 3D effect */
+}
+@media screen and (min-width: 1200px) {
+  .flip-card {
+    width: 270px;
+  }
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background: #fff;
+  border-radius: 15px;
+  border: 1px solid #fd9222;
+  color: black;
+}
+
+.unique-components-link {
+  text-decoration: none;
+  list-style: none;
+}
+
+.flip-card-front > img {
+  margin-top: 28px;
+  margin-left: 56px;
+}
+@media screen and (min-width: 1200px) {
+  .flip-card-front > img {
+    margin-left: 28px;
+  }
+}
+
+.component-name {
+  color: #111;
+  /* font-family: Montserrat; */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px; /* 128.571% */
+  letter-spacing: -0.28px;
+  text-transform: uppercase;
+  margin-top: 25px;
+  margin-left: 28px;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background: #fff;
+  color: white;
+  transform: rotateY(180deg);
+  border-radius: 15px;
+  border: 1px solid #fd9222;
+  padding: 28px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .flip-card-back {
+    padding: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .flip-card-back {
+    display: block;
+  }
+}
+
+.overlay-name {
+  color: #111;
+  /* font-family: Montserrat; */
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.54px;
+  text-transform: uppercase;
+  text-align: left;
+  margin-bottom: 8px;
+}
+
+.overlay-tags {
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+  margin-bottom: 14px;
+}
+
+.overlay-tag-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px 16px;
+  gap: 4px;
+  border-radius: 35px;
+  border: 1px solid #fd9222;
+  background: #fafafa;
+}
+
+.overlay-tag {
+  color: #111;
+  /* font-family: Montserrat; */
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px; /* 120% */
+}
+
+.overlay-paragraph {
+  color: #111;
+  /* font-family: Montserrat; */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+  letter-spacing: -0.28px;
+  width: 275px;
+}
+@media screen and (min-width: 1200px) {
+  .overlay-paragraph {
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 230px;
+    height: 162px;
+  }
 }
