--- a/css/unique-components.css
+++ b/css/unique-components.css
@@ -313,4 +313,9 @@
     white-space: nowrap;
     text-overflow: ellipsis;
   }
+  .overflow-ellipsis:hover {
+    overflow-x: visible;
+    white-space: normal;
+    text-overflow: "";
+  }
 }
