--- a/css/unique-components.css
+++ b/css/unique-components.css
@@ -47,6 +47,11 @@
   align-items: center;
   min-width: 335px;
 }
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .components-flex-box {
+    min-width: 290px;
+  }
+}
 
 .components-secondary-title {
   color: #111;
@@ -60,6 +65,11 @@
   text-align: center;
   margin-bottom: 24px;
   max-width: 283px;
+}
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .components-secondary-title {
+    max-width: 290px;
+  }
 }
 @media screen and (min-width: 768px) {
   .components-secondary-title {
@@ -87,6 +97,11 @@
   justify-content: center;
   margin-bottom: 32px;
   width: 300px;
+}
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .components-paragraph {
+    max-width: 290px;
+  }
 }
 @media screen and (min-width: 768px) {
   .components-paragraph {
@@ -150,6 +165,11 @@
   overflow: visible;
   perspective: 2000px; /* Remove this if you don't want the 3D effect */
 }
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .flip-card {
+    max-width: 290px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .flip-card {
     width: 270px;
@@ -196,6 +216,11 @@
 .flip-card-front > img {
   margin-top: 28px;
   margin-left: 56px;
+}
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .flip-card-front > img {
+    margin-left: 31px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .flip-card-front > img {
@@ -299,6 +324,11 @@
   letter-spacing: -0.28px;
   width: 275px;
 }
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .overlay-paragraph {
+    max-width: 240px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .overlay-paragraph {
     width: 230px;
@@ -317,5 +347,8 @@
     overflow-x: visible;
     white-space: normal;
     text-overflow: "";
+  }
+  .overflow-ellipsis:hover + .flip-card-back {
+    height: 120%;
   }
 }
